Fix overflow on DataPrivacy page due to URL not breaking

--- a/src/pages/DataPrivacy/DataPrivacy.css
+++ b/src/pages/DataPrivacy/DataPrivacy.css
@@ -1,5 +1,4 @@
 .DataPrivacy__text-container {
-  max-width: 700px;
   padding-bottom: 30px;
 }
 .DataPrivacy__text-container h1,
@@ -9,7 +8,11 @@ h3 {
   padding-bottom: 10px;
 }
 
-.DataPrivacy__server__list {
+.DataPrivacy__server--list {
   list-style-position: inside;
   padding: 10px;
+}
+
+.DataPrivacy__link {
+  word-break: break-all;
 }
